$NetBSD: CHANGES-2008,v 1.2996 2008/11/13 14:28:05 tron Exp $

Changes to the packages collection and infrastructure in 2008:

	Updated mail/dovecot to 1.0.10 [ghen 2008-01-01]
	Updated www/opera to 9.25 [xtraeme 2008-01-02]
	Updated sysutils/p5-Unix-Syslog to 1.0 [adrianp 2008-01-03]
	Updated net/p5-Net-Server to 0.97 [adrianp 2008-01-03]
	Updated net/libupnp to 1.6.3 [obache 2008-01-03]
	mk/bsd.pkg.mk: freeze ended for pkgsrc-2007Q4 branch [agc 2008-01-02]
	Updated textproc/hyperestraier to 1.4.13 [obache 2008-01-03]
	Updated textproc/p5-native-hyperestraier to 1.0.0.1.4.13 [obache 2008-01-03]
	Updated textproc/ruby-native-hyperestraier to 1.0.0.1.4.13 [obache 2008-01-03]
	Updated textproc/ruby-pure-hyperestraier to 1.0.0.1.4.13 [obache 2008-01-03]
	Updated lang/guile to 1.8.3 [gdt 2008-01-03]
	Updated misc/proj to 4.6.0 [gdt 2008-01-03]
	Updated geography/py-proj to 1.8.3 [gdt 2008-01-03]
	Updated geography/postgresql81-postgis to 1.3.2 [gdt 2008-01-03]
	Added pkgtools/lintpkgsrc version 4.82 [rillig 2008-01-03]
	Updated net/net-snmp to 5.4.1nb1 [seb 2008-01-03]
	Updated math/maxima to 5.14.0 [tonio 2008-01-03]
	Updated emulators/bochs to 2.3.6 [xtraeme 2008-01-03]
	Added devel/p5-Getopt-Long-Descriptive version 0.06 [seb 2008-01-03]
	Added devel/p5-App-Cmd version 0.012 [seb 2008-01-03]
	Updated mail/sylpheed to 2.4.8 [xtraeme 2008-01-03]
	Updated comms/p5-Device-SerialPort to 1.04 [grant 2008-01-03]
	Updated comms/p5-Device-Modem to 1.48 [grant 2008-01-03]
	Updated comms/p5-Device-Gsm to 1.48 [grant 2008-01-03]
	Updated graphics/ruby-RMagick to 2.0.0 [obache 2008-01-04]
	Updated devel/scmcvs to 1.11.22 [martti 2008-01-04]
	Updated security/ap-modsecurity2 to 2.1.4 [adrianp 2008-01-04]
	Updated www/php4 to 4.4.8 [adrianp 2008-01-04]
	Updated wm/evilwm to 1.0.0 [sketch 2008-01-04]
	Updated lang/erlang to 12.0 [ghen 2008-01-04]
	Updated lang/erlang-doc to 12.0 [ghen 2008-01-04]
	Updated lang/erlang-man to 12.0 [ghen 2008-01-04]