@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST.pre,v 1.1 1998/07/22 01:59:51 tsarna Exp $
-bin/grail
