@@ -1,4 +1,0 @@
-#! /bin/sh
-# $NetBSD: grail,v 1.1 1998/07/22 01:58:19 tsarna Exp $
-exec @PYTHONBIN@ \
-	@PREFIX@/@GRAILDIR@/grail.pyc ${1+"$@"}
